smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/operations.smithy
$version: "2.0"

namespace smithy.example

@error("client")
structure ConcreteError {}

@error("server")
structure MixinError {}

@mixin
@internal
operation InternalMixin {
    errors: [MixinError]
}

operation ConcreteOperation with [InternalMixin] {
    errors: [ConcreteError]
}
